# DDL

./: .gitignore  README.md  pyproject.toml
predictive_circuits/src/: .gitignore  README.md
predictive_circuits/src/network/model/: base_model.py  mapping_random.py  place_field_formation.py  remapping.py  remapping_random.py  velocity_dependence.py  vis_exp_1.py
predictive_circuits/src/network/model/mapping_comp/: analysis.ipynb
predictive_circuits/src/network/model/overview/: model_2_overview.py  overview_ploat.ipynb
predictive_circuits/src/network/model/remapping/: Untitled.ipynb
predictive_circuits/src/network/model/velocity_dependence/: analysis.ipynb
predictive_circuits/src/network/model/vis_exp_1/: generate_input.ipynb
predictive_circuits/src/network/model_2/: base_model.py  place_field_formation.py
predictive_circuits/src/network/model_rate/: base_model.py  place_field_consolidation.py  place_field_formation.py  velocity_dependence.py
predictive_circuits/src/network/model_rate/fig_2/: Untitled.ipynb  Untitled1.ipynb  base_model.py  place_field_consolidation.py
predictive_circuits/src/network/model_rate/fig_2/old/: Untitled.ipynb  Untitled1.ipynb
predictive_circuits/src/network/model_rate/fig_2_alt/: base_model.py  place_field_consolidation.py
predictive_circuits/src/network/model_rate/fig_2_alt/fig/: fig_2.ipynb
predictive_circuits/src/network/model_rate/input_generation/: linear_track.ipynb
predictive_circuits/src/network/model_rate/old/input_generation/: __init__.py
