[project]
name = "predictive-circuits"
version = "0.1.0"
description = ""
authors = [
    {name = "ackurth",email = "anno.kurth@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "xarray (>=2025.4.0,<2026.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
